package interfaces;

public interface Notificacao {

    void canalDeComunicacao();

    void perfilDeCliente();

    void enviarMensagem();
}
